--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Flores y corazones</title>
-  <link rel="stylesheet" href="../CSS/Flor.css">
+  <link rel="stylesheet" href="Flor.css">
 </head>
 <body>
 <!-- partial:index.partial.html -->
@@ -433,6 +433,6 @@
       </svg>
 </body>
 <!-- partial -->
-   <script src="../JS/Flor.js"></script>
+   <script src="Flor.js"></script>
 </body>
 </html>
