--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>Flores y corazones</title>
-  <link rel="stylesheet" href="Flor.css">
+  <link rel="stylesheet" href="./style.css">
+
 </head>
 <body>
 <!-- partial:index.partial.html -->
@@ -433,6 +434,7 @@
       </svg>
 </body>
 <!-- partial -->
-   <script src="Flor.js"></script>
+  <script  src="./script.js"></script>
+
 </body>
 </html>
