--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>Flores y corazones</title>
-  <link rel="stylesheet" href="./style.css">
+  <link rel="stylesheet" href="./Flor.css">
+
 
 
 </head>
@@ -435,8 +436,10 @@
       </svg>
 </body>
 <!-- partial -->
-  <script  src="./script.js"></script>
+  <script src="./Flor.js"></script>
+
 
 </body>
 </html>
+
 
