--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 
 <body class="container">
+  <div class="corner-text">Eres muy linda <3 <br> atte:Jared :)</div>
   <div class="night"></div>
   <div class="flowers">
     <div class="flower flower--1">
@@ -440,6 +441,7 @@
 
 </body>
 </html>
+
 
 
 
